--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Launcher2022">
+        android:theme="@style/Theme.Design.NoActionBar">
         <activity
             android:name=".ConfigActivity"
             android:exported="false" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".menu.MainActivity"
             android:theme="@style/SplashTheme"
             android:exported="true">
             <intent-filter>
@@ -24,6 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".pegsolitaire.PegGame"
+            android:exported="true">
+
+        </activity>
+        <activity android:name=".doszeroquatrevuit.DosMilQuarantaVuit" android:exported="true"/>
     </application>
 
 </manifest>
