--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
             android:name=".ConfigActivity"
             android:exported="false" />
 
+        <activity android:name=".db.ScoreDisplay"
+            android:exported="false"/>
+
         <activity
             android:name=".menu.MainActivity"
             android:theme="@style/SplashTheme"
